[package]
name = "terminal-utils"
version = "0.1.0"
authors = ["Mihir Gadgil <16473290+scimas@users.noreply.github.com>"]
edition = "2018"
description = "A library to work with terminal."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
